--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,11 @@
-<p>card works!</p>
+<div class="card">
+    <div class="card-body card-image"
+        style="background-image: url({{fav.ImageUrl}})">
+        <i class="fa fa-trash" aria-hidden="true" (click)="onDelete(fav)"></i>
+    </div>
+    <a [href]="fav.Link" target="_blank">
+        <div class="card-footer">
+            <h4>{{fav.Title}}</h4>
+        </div>
+    </a>
+</div>
