--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,110 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-md-2">
+        <div class="row">
+            <div class="col-md-12 pt-2" *ngFor="let note of leftNoteArray">
+                <app-note [note]="note"></app-note>
+            </div>
+            
+        </div>
+    </div>
+    <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-4" *ngFor="let favData of favArray"> 
+                <app-card [fav]="favData"></app-card>
+            </div>
+            <div class="col-md-4" (click)="openFavModel()">
+              <div class="card new">
+                <div class="card-body text-center">
+                  <i class="fa fa-plus new-icon" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+            
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="col-md-12 pt-2" *ngFor="let note of rightNoteArray">
+            <app-note [note]="note"></app-note>
+        </div>
+         
+    </div>
+</div>
+
+
+
+<div class="modal" id="modelNote">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Note</h4>
+                <button type="button" class="btn-close" (click)="closeNoteModel()" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                      <label>Title</label>
+                      <input type="text" [(ngModel)]="noteObj.Title" class="form-control" placeholder="Enter Title" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <label>Details</label>
+                      <textarea class="form-control" [(ngModel)]="noteObj.Details" placeholder="Enter Details"></textarea>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <label>Position</label>
+                      <select class="form-control" [(ngModel)]="noteObj.Position">
+                        <option selected disabled>Select Option</option>
+                        <option value="left">Left</option>
+                        <option value="right">Right</option>
+                      </select>
+                    </div>
+                    <div class="col-md-4">
+                      <label style="margin: 0;">Select Color</label>
+                      <input type="color" [(ngModel)]="noteObj.Color" class="form-control">
+                    </div>
+                  </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" (click)="closeNoteModel()" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" (click)="saveNote()" >Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="modelFav">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Add New Fav Link</h4>
+                <button type="button" class="btn-close" (click)="closeFavModel()" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-4">
+                      <label>Title</label>
+                      <input type="text" [(ngModel)]="favObj.Title" class="form-control" placeholder="Enter Title" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-10">
+                      <label>Link</label>
+                      <input type="text" [(ngModel)]="favObj.Link" class="form-control" placeholder="Enter Link" />
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <label>Image Url</label>
+                      <input type="text" [(ngModel)]="favObj.ImageUrl" class="form-control" placeholder="Image Url" />
+                    </div> 
+                  </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" (click)="closeFavModel()" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success" (click)="saveFav()" >Save</button>
+            </div>
+        </div>
+    </div>
+</div>
