--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -1,1 +1,11 @@
-<p>note works!</p>
+
+
+<div class="media border p-3" [style.background-color]="note.Color"  >
+    <div class="media-body">
+        <span> <b class="whiteText">{{note.Title}}</b></span> <span class="right" >
+            <i class="fa fa-trash whiteText" (click)="delete(note)" aria-hidden="true"></i>
+        </span>
+        <p class="whiteText">{{note.Details}}</p>
+    </div>
+</div>
+  
